# spaceman-marble

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .compilerflags.json  .gitattributes  .gitignore  .gitmodules  .gutctags  .pre-commit-config.yaml  .pylintrc.toml  LICENSE.txt  README.md  wheel.docx
.hookspace/: .gitignore  PSScriptAnalyzerSettings.psd1  environment.json  lspconfig.json
Firmware/: Acceleration.cpp  Acceleration.h  Firmware.ino  HID.h  PMW3389.cpp  PMW3389.h  RingBuffer.h  Scroll.cpp  Scroll.h  Trackball.cpp  Trackball.h
driver/: .clangd  CMakeLists.txt  CMakePresets.json  Makefile  vcpkg-configuration.json  vcpkg.json
driver/src/: CMakeLists.txt  main.cpp  version.cpp.in  version.hpp  winconsole.hpp
driver/tests/: CMakeLists.txt
